--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "isomorphic-fetch": "^2.2.1",
+    "qs": "^6.5.2"
   },
   "babel": {
     "presets": [
